Fix rules book compilation and keep HardcoreCore features